# TimeSeriesEconPy

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hatch_build.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: checks.yml  docs.yml  release.yml  upstream-sync.yml  wheels.yml
api_index/: index.html
benchmarks/compare/: README.md  run.py  scenarios.py  scenarios_pandas.py  scenarios_polars.py
benchmarks/compare/julia/: Manifest.toml  Project.toml  runner.jl  scenarios.jl
benchmarks/compare/results/: 2026-05-15_211530Z.json  2026-05-15_211530Z_43a7a93.json  2026-05-15_221430Z_7396bb0.json  2026-05-15_224300Z_defb7ae.json  2026-05-15_231950Z_8b2c709.json  2026-05-16_010839Z_a371e02.json  2026-05-16_014528Z.json  2026-05-16_014528Z_a93b73e.json  2026-05-16_022314Z.json  2026-05-16_022314Z_ac551ac.json  2026-05-16_135903Z.json  2026-05-16_135903Z_640d0e7.json  2026-05-16_153814Z_98a554c.json  2026-05-16_160019Z.json  2026-05-16_160019Z_98a554c.json  2026-05-16_222828Z_ac884b6.json  2026-05-17_020117Z.json  2026-05-17_020117Z_b38c241.json  2026-05-17_020232Z_b38c241.json  2026-05-17_021626Z.json  2026-05-17_021626Z_b38c241.json  README.md  latest.md
design/cython_strategy/: index.html
design/decisions/: index.html
design/frequency_model/: index.html
design/migration_from_julia/: index.html
design/serialization/: index.html
design/tseries_protocols/: index.html
docs/: api_index.md  faq.md  index.md
docs/design/: cython_strategy.md  decisions.md  frequency_model.md  migration_from_julia.md  serialization.md  tseries_protocols.md
docs/reference/: fconvert.md  frequencies.md  indexing.md  interop.md  io.md  linalg.md  math.md  mirror.md  mit.md  mvtseries.md  options.md  plotting.md  recursive.md  stats.md  tseries.md  various.md  workspace.md  x13.md
docs/tutorials/: 1_timeseriesecon.md
faq/: index.html
reference/fconvert/: index.html
reference/frequencies/: index.html
reference/indexing/: index.html
reference/interop/: index.html
reference/io/: index.html
reference/linalg/: index.html
reference/math/: index.html
reference/mirror/: index.html
reference/mit/: index.html
reference/mvtseries/: index.html
reference/options/: index.html
reference/plotting/: index.html
reference/recursive/: index.html
reference/stats/: index.html
reference/tseries/: index.html
reference/various/: index.html
reference/workspace/: index.html
reference/x13/: index.html
scripts/: check_mirror.py  fetch_x13as_local.py
search/: search_index.json
src/tsecon/: __init__.py  _bdaily.py  _fconvert_kernels.py  _fconvert_kernels_cy.pyx  _indexing_kernels.py  _indexing_kernels_cy.pyx  _kernel_dispatch.py  _math.py  _math_kernels.py  _math_kernels_cy.pyx  _mirror.py  _options.py  _rec_kernels.py  _rec_kernels_cy.pyx  _stats.py  _stats_kernels.py  _stats_kernels_cy.pyx  _various.py  frequencies.py  indexing.py  linalg.py  mit.py  mitrange.py  mvtseries.py  recursive.py  tseries.py  workspace.py
src/tsecon/fconvert/: __init__.py  _helpers.py  _mit.py  _tseries.py
src/tsecon/interop/: __init__.py  _common.py  pandas.py  polars.py
src/tsecon/io/: __init__.py  json.py
src/tsecon/plotting/: __init__.py  _common.py  _matplotlib.py  _plotly.py
src/tsecon/x13/: X13AS_LICENSE.txt  __init__.py  _consts.py  _result.py  _spec.py  _write.py  _x13.py
tests/: test_fconvert.py  test_fconvert_calendar.py  test_fconvert_kernel_properties.py  test_fconvert_kernels.py  test_frequencies.py  test_indexing.py  test_indexing_properties.py  test_interop_pandas.py  test_interop_polars.py  test_linalg.py  test_math.py  test_math_kernel_properties.py  test_mit.py  test_mitrange.py  test_mvtseries.py  test_options_and_bdaily.py  test_plotting.py  test_rec_linear_properties.py  test_recursive.py  test_repr_html.py  test_serialize.py  test_smoke.py  test_stats.py  test_stats_kernel_properties.py  test_stats_kernels.py  test_tseries.py  test_various.py  test_workspace.py
tests/benchmarks/: test_bench_core.py
tests/x13/: conftest.py  test_builders.py  test_consts.py  test_fidelity.py  test_readers.py  test_run.py  test_skeleton.py  test_validate.py  test_workspace.py  test_writer.py  test_x13var.py
tests/x13/fixtures/: capture_julia_d11.jl  d11_julia_reference.csv
tutorials/1_timeseriesecon/: index.html
