[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "TimeSeriesEconPy"
version = "0.0.1.dev0"
description = "A time-series language for macroeconomics, ported from TimeSeriesEcon.jl"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Nicholas Labelle St-Pierre", email = "statespaceecon@gmail.com" },
]
keywords = ["time-series", "macroeconomics", "econometrics", "frequencies"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.8"]
plotly = ["plotly>=5.20"]
pandas = ["pandas>=2.2"]
polars = ["polars>=1.0"]
all = [
    "matplotlib>=3.8",
    "plotly>=5.20",
    "pandas>=2.2",
    "polars>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.urls]
Homepage = "https://github.com/Nic2020/TimeSeriesEconPy"
Documentation = "https://Nic2020.github.io/TimeSeriesEconPy/"
Repository = "https://github.com/Nic2020/TimeSeriesEconPy"
Issues = "https://github.com/Nic2020/TimeSeriesEconPy/issues"
"Julia source" = "https://github.com/bankofcanada/TimeSeriesEcon.jl"

[tool.hatch.build.targets.wheel]
packages = ["src/tsecon"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

# ---------------------------------------------------------------------------
# Ruff: lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "C4",  # comprehensions
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "PL",  # pylint subset
    "PT",  # pytest-style
    "D",   # pydocstyle
]
ignore = [
    "D105",  # undocumented magic methods — dunders rarely benefit from docstrings
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
    "PLR0913",  # too many arguments — common in scientific APIs
    "PLR2004",  # magic value comparisons — common in tests / freq math
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "PLR2004", "S101", "PT011", "PLW0108"]
"docs/**" = ["D", "INP001"]
"scripts/**" = ["D", "INP001"]
"benchmarks/**" = ["D", "INP001"]
# Multi-type arithmetic dispatch on MIT/Duration intentionally has many branches.
"src/tsecon/mit.py" = ["PLR0911", "PLR0912"]
# Indexing dispatch on TSeries (MIT / MITRange / slice / int / array / bool TSeries / MIT-slice)
# fans out into many branches; collapsing them hurts readability.
"src/tsecon/tseries.py" = ["PLR0911", "PLR0912"]
# MVTSeries indexing dispatches across an even larger surface than TSeries
# (rows × columns × MIT / MITRange / int / bool / str / list-of-str), and the
# constructor enumerates the Julia construction-form union (range / scalar /
# init-function / TSeries / 2-D / kwargs). Both genuinely need many branches.
"src/tsecon/mvtseries.py" = ["PLR0911", "PLR0912", "PLR0915"]
# _math.py grew an anchor-resolution helper for the MVTSeries undiff overload
# whose Julia counterpart is type-dispatch — keep the readable branch list.
"src/tsecon/_math.py" = ["PLR0911", "PLR0912"]
# _bdaily.py's replace_nans_if_warranted mirrors Julia's two-direction
# (k > 0 / k < 0) NaN-infill loops with their full skip_all_nans / skip_holidays
# / input_is_holiday branch structure; collapsing the branches loses the line-
# by-line parity with the Julia source.
"src/tsecon/_bdaily.py" = ["PLR0912"]
# Pretty-printer + frequency-dispatch helpers fan out across the frequency
# hierarchy and across the union of supported value types.
"src/tsecon/workspace.py" = ["PLR0911"]
# JSON encode/decode is type-dispatch over the union of supported values.
"src/tsecon/io/json.py" = ["PLR0911"]
# fconvert truncation deciders mirror Julia's four Val{ref}*Val{require}
# overloads as four explicit if-blocks; each branch returns 0 or 1, so
# collapsing them into nested predicates loses the side-by-side parity
# with the Julia source.
"src/tsecon/fconvert/_helpers.py" = ["PLR0911"]
# fconvert dispatch fans out across (call-shape, direction, method, ref).
"src/tsecon/fconvert/__init__.py" = ["PLR0911"]
"src/tsecon/fconvert/_tseries.py" = ["PLR0911", "PLR0912"]
# Panel-plot kernels fan out across (dataset × variable × axis-kind × kwargs)
# loops; collapsing them into helpers would just move branches around.
"src/tsecon/plotting/_matplotlib.py" = ["PLR0912"]
"src/tsecon/plotting/_plotly.py" = ["PLR0912"]
# __post_init__ / __new__ are constructor-flavored; D102 (undocumented public method)
# is noise for them and for slot dunders ruff hasn't classified.
"src/tsecon/**" = ["D102"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# mypy: strict on src, relaxed on tests
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
files = ["src/tsecon"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "plotly.*",
    "pandas.*",
    "polars.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    # Skip pytest-benchmark scenarios in the default test run; the regular
    # suite is correctness-focused. Use `--benchmark-only` (or
    # `--benchmark-enable`) when running `tests/benchmarks/` to opt in.
    "--benchmark-skip",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks performance benchmarks",
]
# Escalate UserWarning and RuntimeWarning to test failures. The intent:
# every such warning the code emits should be either (a) an assertion
# target (`pytest.warns(...)`), (b) explicitly accepted on a single test
# (`@pytest.mark.filterwarnings`), or (c) suppressed at the source because
# its cause has been fixed. Letting an unannotated warning land in test
# output means "we noticed but didn't decide" — and that's how real
# bugs-in-disguise survive unnoticed until a user files an issue.
#
# Originating cases:
# * matplotlib YP auto-tick "+" UserWarning on default renders (session 13,
#   fixed 2026-05-15) — was rationalized as "informational" until pushed on.
# * pct() divide-by-zero RuntimeWarning fired incidentally from
#   test_frequency_propagates (input started at 0.0) — the library decision
#   to NOT silence is paper-noted; the test triggering it incidentally was
#   not. Fixed 2026-05-15 by adjusting the test input and adding a
#   deliberate TestPctZeroSemantics::test_pct_emits_runtimewarning_on_zero
#   test that locks the user-facing contract in via pytest.warns.
#
# See claude_files/SESSION_LOG.md session 13 follow-ups for both case studies.
filterwarnings = [
    "error::UserWarning",
    "error::RuntimeWarning",
]
