[build-system]
# Cython + NumPy + setuptools are build-time deps because the wheel ships
# compiled extension modules (see hatch_build.py / decision 17 /
# src/tsecon/_rec_kernels_cy.pyx). setuptools.command.build_ext drives the
# C-compiler invocation; Cython produces the C sources from .pyx; NumPy
# provides include directories the .pyx imports. At runtime, only NumPy is
# required — Cython and setuptools are purely build tools.
requires = ["hatchling>=1.27", "Cython>=3.0", "numpy>=1.26", "setuptools>=68"]
build-backend = "hatchling.build"

[project]
name = "TimeSeriesEconPy"
version = "0.0.1.dev0"
description = "A time-series language for macroeconomics, ported from TimeSeriesEcon.jl"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Nicholas Labelle St-Pierre", email = "statespaceecon@gmail.com" },
]
keywords = ["time-series", "macroeconomics", "econometrics", "frequencies"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.8"]
plotly = ["plotly>=5.20"]
pandas = ["pandas>=2.2"]
polars = ["polars>=1.0"]
# Powers the country/subdivision form of `set_holidays_map(...)` and
# `get_holidays_options(...)` — see _options.py. The Julia upstream ships
# bundled CSVs; we delegate to the upstream `python-holidays` package so
# there is a single source of truth for the calendar data.
holidays = ["holidays>=0.40"]
all = [
    "matplotlib>=3.8",
    "plotly>=5.20",
    "pandas>=2.2",
    "polars>=1.0",
    "holidays>=0.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    # `markdown-exec` is Python's `Documenter.@repl tse` analogue: it runs
    # fenced code blocks tagged `python exec="true" source="material-block"
    # session="tse"` during `mkdocs build`, sharing state across blocks with
    # the same session id. See docs/PLAN.md for the executable-docs model.
    "markdown-exec[ansi]>=1.10",
    # Cython is in [build-system].requires for wheel builds; we also list it
    # in dev so editable installs / `uv run python setup.py build_ext` paths
    # have it available without an extra activation step.
    "Cython>=3.0",
]

[project.urls]
Homepage = "https://github.com/Nic2020/TimeSeriesEconPy"
Documentation = "https://Nic2020.github.io/TimeSeriesEconPy/"
Repository = "https://github.com/Nic2020/TimeSeriesEconPy"
Issues = "https://github.com/Nic2020/TimeSeriesEconPy/issues"
"Julia source" = "https://github.com/bankofcanada/TimeSeriesEcon.jl"

[tool.hatch.build.targets.wheel]
packages = ["src/tsecon"]
# The compiled extensions land next to their .pyx sources in src/tsecon/.
# hatch_build.py builds them in-place during the wheel build step.
artifacts = [
    "src/tsecon/*.so",
    "src/tsecon/*.pyd",
]

[tool.hatch.build.targets.wheel.hooks.custom]
# Cython compilation hook — see hatch_build.py.
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/hatch_build.py",
]

# ---------------------------------------------------------------------------
# Ruff: lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "C4",  # comprehensions
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "PL",  # pylint subset
    "PT",  # pytest-style
    "D",   # pydocstyle
]
ignore = [
    "D105",  # undocumented magic methods — dunders rarely benefit from docstrings
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
    "PLR0913",  # too many arguments — common in scientific APIs
    "PLR2004",  # magic value comparisons — common in tests / freq math
    # Unicode math notation (×, −, ρ, γ, etc.) in docstrings is legitimate
    # in a scientific package — benchmark speedups read as "7.8×" not "7.8x",
    # variance formulas use ρ and γ, etc. The "ambiguity" warning is targeted
    # at cases where Unicode could be confused with English letters in
    # identifiers; in docstring prose / math it just degrades readability.
    "RUF001",  # ambiguous Unicode in strings
    "RUF002",  # ambiguous Unicode in docstrings
    "RUF003",  # ambiguous Unicode in comments
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "PLR2004", "S101", "PT011", "PLW0108"]
"docs/**" = ["D", "INP001"]
"scripts/**" = ["D", "INP001"]
"benchmarks/**" = ["D", "INP001"]
# The 4-column harness driver branches over (julia_avail × pandas_avail ×
# polars_avail × julia_only × python_only) and per-scenario logging — the
# fan-out is intentional and collapsing it hurts readability.
"benchmarks/compare/run.py" = ["D", "INP001", "PLR0912", "PLR0915"]
# Build hook lazy-imports its build-only deps (Cython, NumPy, setuptools)
# so the file is loadable in environments that have only hatchling.
"hatch_build.py" = ["D", "INP001", "PLC0415"]
# Multi-type arithmetic dispatch on MIT/Duration intentionally has many branches.
"src/tsecon/mit.py" = ["PLR0911", "PLR0912"]
# Indexing dispatch on TSeries (MIT / MITRange / slice / int / array / bool TSeries / MIT-slice)
# fans out into many branches; collapsing them hurts readability.
"src/tsecon/tseries.py" = ["PLR0911", "PLR0912"]
# The vectorised `lookup` wrapper validates MIT-or-int keys homogeneously,
# frequency-checks each MIT, and bounds-checks the resulting offsets — the
# branch fan-out mirrors tseries.py's indexing dispatch.
"src/tsecon/indexing.py" = ["PLR0912"]
# The aggregate_groups_numpy reference enumerates six method-code branches
# (mean/sum/min/max/first/last), each with its own inner per-group loop —
# the per-method specialisation is the whole point of the reference (it
# mirrors what the Cython kernel does); collapsing the branches into a
# dispatch dict would defeat the side-by-side comparison.
"src/tsecon/_fconvert_kernels.py" = ["PLR0912"]
# MVTSeries indexing dispatches across an even larger surface than TSeries
# (rows × columns × MIT / MITRange / int / bool / str / list-of-str), and the
# constructor enumerates the Julia construction-form union (range / scalar /
# init-function / TSeries / 2-D / kwargs). Both genuinely need many branches.
"src/tsecon/mvtseries.py" = ["PLR0911", "PLR0912", "PLR0915"]
# _math.py grew an anchor-resolution helper for the MVTSeries undiff overload
# whose Julia counterpart is type-dispatch — keep the readable branch list.
"src/tsecon/_math.py" = ["PLR0911", "PLR0912"]
# _bdaily.py's replace_nans_if_warranted mirrors Julia's two-direction
# (k > 0 / k < 0) NaN-infill loops with their full skip_all_nans / skip_holidays
# / input_is_holiday branch structure; collapsing the branches loses the line-
# by-line parity with the Julia source.
"src/tsecon/_bdaily.py" = ["PLR0912"]
# _various.py implements the LikeWorkspace dispatch table for overlay /
# compare / reindex — each function branches over (TSeries / MVTSeries /
# Workspace / Mapping / scalar / ndarray) pairs. The N-arm dispatch is the
# whole point; collapsing the branches into a registry pattern loses the
# Julia-side-by-side readability.
"src/tsecon/_various.py" = ["PLR0911"]
# recursive.py's rec_linear wrapper enumerates the M1.6.1 forward/backward
# step-sign × per-arg validation contract (frequency-mismatch, step != 1,
# coeffs/lags ndim, length-mismatch, empty, min(lags), dtype, initial-cond)
# — 10 raise sites in one function. The branch fan-out IS the validation
# contract.
"src/tsecon/recursive.py" = ["PLR0912", "PLR0915"]
# Pretty-printer + frequency-dispatch helpers fan out across the frequency
# hierarchy and across the union of supported value types.
"src/tsecon/workspace.py" = ["PLR0911"]
# JSON encode/decode is type-dispatch over the union of supported values.
"src/tsecon/io/json.py" = ["PLR0911"]
# fconvert truncation deciders mirror Julia's four Val{ref}*Val{require}
# overloads as four explicit if-blocks; each branch returns 0 or 1, so
# collapsing them into nested predicates loses the side-by-side parity
# with the Julia source.
"src/tsecon/fconvert/_helpers.py" = ["PLR0911"]
# fconvert dispatch fans out across (call-shape, direction, method, ref).
"src/tsecon/fconvert/__init__.py" = ["PLR0911"]
"src/tsecon/fconvert/_tseries.py" = ["PLR0911", "PLR0912"]
# Panel-plot kernels fan out across (dataset × variable × axis-kind × kwargs)
# loops; collapsing them into helpers would just move branches around.
"src/tsecon/plotting/_matplotlib.py" = ["PLR0912"]
"src/tsecon/plotting/_plotly.py" = ["PLR0912"]
# __post_init__ / __new__ are constructor-flavored; D102 (undocumented public method)
# is noise for them and for slot dunders ruff hasn't classified.
"src/tsecon/**" = ["D102"]
# X13var leaf class names (ao, ls, tc, so, aos, ...) are the X-13ARIMA-SEATS
# .spc grammar keywords. The Python port preserves the lowercase Julia-mirror
# names because __str__ uses ``type(self).__name__`` for serialization;
# capitalising them would break .spc output or require a parallel name map.
# N801 (Class name should use CapWords convention) is therefore disabled
# for _spec.py — see the module docstring for the rationale.
"src/tsecon/x13/_spec.py" = ["N801"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# mypy: strict on src, relaxed on tests
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
files = ["src/tsecon"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "plotly.*",
    "pandas.*",
    "polars.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    # Skip pytest-benchmark scenarios in the default test run; the regular
    # suite is correctness-focused. Use `--benchmark-only` (or
    # `--benchmark-enable`) when running `tests/benchmarks/` to opt in.
    "--benchmark-skip",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks performance benchmarks",
]
# Escalate UserWarning and RuntimeWarning to test failures. The intent:
# every such warning the code emits should be either (a) an assertion
# target (`pytest.warns(...)`), (b) explicitly accepted on a single test
# (`@pytest.mark.filterwarnings`), or (c) suppressed at the source because
# its cause has been fixed. Letting an unannotated warning land in test
# output means "we noticed but didn't decide" — and that's how real
# bugs-in-disguise survive unnoticed until a user files an issue.
#
# Originating cases:
# * matplotlib YP auto-tick "+" UserWarning on default renders (session 13,
#   fixed 2026-05-15) — was rationalized as "informational" until pushed on.
# * pct() divide-by-zero RuntimeWarning fired incidentally from
#   test_frequency_propagates (input started at 0.0) — the library decision
#   to NOT silence is paper-noted; the test triggering it incidentally was
#   not. Fixed 2026-05-15 by adjusting the test input and adding a
#   deliberate TestPctZeroSemantics::test_pct_emits_runtimewarning_on_zero
#   test that locks the user-facing contract in via pytest.warns.
#
# See claude_files/SESSION_LOG.md session 13 follow-ups for both case studies.
filterwarnings = [
    "error::UserWarning",
    "error::RuntimeWarning",
]
